repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__problems__maintainer_nonexistent_repository.snap
---
source: repology-webapp/tests/snapshot_tests/problems.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 404
Header: content-type: text/plain; charset=utf-8
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: content-length: 20
---
repository not found
