repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__problems__repository_normal.snap
---
source: repology-webapp/tests/snapshot_tests/problems.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: text/html
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 9993
---
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="utf-8">
	<meta name="viewport" content="width=device-width, initial-scale=1">

	<meta name="description" content="Multiple package repositories analyzer">
	<meta name="keywords" content="repository, package, packages, version">
	<meta name="author" content="Dmitry Marakasov">

	<link rel="canonical" href="https://repology.org/repository/freebsd/problems"/>

	<title>Problems in FreeBSD - Repology</title>
	<link rel="stylesheet" href="/static/bootstrap.min.v3.3.7.8dc6d358477be27a.css">
	<link rel="stylesheet" href="/static/repology.v21.bb7b05a7b3bfbdb9.css">
	<link rel="icon" href="/static/repology.v1.6108dff405ea1a42.ico" sizes="16x16 32x32 64x64" type="image/x-icon">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology packages" href="/opensearch/project.xml">
	<link rel="search" type="application/opensearchdescription+xml" title="Repology maintainers" href="/opensearch/maintainer.xml">
</head>
<body>


<div class="site-alert-outer">
	<div class="container site-alert-inner">
		<p><a href="https://repology.org/">repology.org</a> domain is back up, repology.amdmi3.ru will be discontinued on October 9th<p>
	</div>
</div>


<nav class="navbar navbar-default navbar-static-top">
	<div class="container">
		<div class="navbar-header">
			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#repology-navbar-collapse" aria-expanded="false">
				<span class="sr-only">Toggle navigation</span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
				<span class="icon-bar"></span>
			</button>
			<a class="navbar-brand" href="/">
				<img alt="Repology" src="/static/repology40x40.v1.0ea026630d9180a2.png" width="40" height="40">
			</a>
		</div>

		<div class="collapse navbar-collapse" id="repology-navbar-collapse">
			<ul class="nav navbar-nav">
				<li><a href="/projects/">Projects</a></li>
				<li><a href="/maintainers/">Maintainers</a></li>
				<li class="active"><a href="/repositories/statistics">Repositories</a></li>
				<li><a href="/tools">Tools</a></li>
				<li><a href="/security/recent-cves">Security</a></li>
			</ul>
			<ul class="nav navbar-nav navbar-right">
				<li><a href="/news">News</a></li>
				<li><a href="/docs">Docs</a></li>
			</ul>
		</div>
	</div>
</nav>


<div class="container">
	
	<h1 class="page-header">Problems in <strong>FreeBSD</strong></h1>
</div>



<div class="container">




<p><b>12</b> problem(s) on this page</p>

<table class="table table-striped table-hover">
	<thead>
		<tr>
			<th class="text-center">Project</th>
			<th class="text-center">Package name</th>
			<th class="text-center">Maintainer</th>
			<th class="text-left">Problem</th>
		</tr>
	</thead>
	<tbody>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				CPE information is missing for this package, while repository defines it for other packages.
				
				
				
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				CPE information is missing for this package, while repository defines it for other packages.
				
				
				Suggested CPEs (as per known <a href="/project/zsh/cves">CVEs</a>):
				<ul class="list-unstyled">
				
					<li><div class="cpe-component">
			<div class="cpe-component-header non-selectable">vendor</div>
			<div class="cpe-component-value">suggesion_a</div>
		</div>
	
	
	
	
	
	
	</li>
				
					<li><div class="cpe-component">
			<div class="cpe-component-header non-selectable">vendor</div>
			<div class="cpe-component-value">suggestion_b</div>
		</div>
	
	
	
	
	
	
	</li>
				
				</ul>
				
				
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				CPE information defined for the package:<div>
	
	
	
	
	
	
	</div>was not found neither among known CVEs nor in NVD CPE dictionary, so it may be invalid.
				
				
				Suggested CPEs (as per known <a href="/project/zsh/cves">CVEs</a>):
				<ul class="list-unstyled">
				
					<li><div class="cpe-component">
			<div class="cpe-component-header non-selectable">vendor</div>
			<div class="cpe-component-value">suggesion_a</div>
		</div>
	
	
	
	
	
	
	</li>
				
					<li><div class="cpe-component">
			<div class="cpe-component-header non-selectable">vendor</div>
			<div class="cpe-component-value">suggestion_b</div>
		</div>
	
	
	
	
	
	
	</li>
				
				</ul>
				
				
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> needs a trailing slash added, otherwise there's a javascript redirect.
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Download link <code>https://example.com/</code> is a permanent redirect to its HTTPS counterpart <code>https://example.com/</code> and should be updated.
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Download link <code>https://example.com/</code> is <a href="/link/https://example.com/">dead</a> (<b class="link-error">HTTP 404</b>)
				for more than a month and should be replaced by alive link (see other packages for hints).
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> points to CPAN which was discontinued.
				The link should be updated to <a href="https://metacpan.org/">MetaCPAN</a> (probably along with download URLs).
				See <a href="https://www.perl.com/article/saying-goodbye-to-search-cpan-org/">https://www.perl.com/article/saying-goodbye-to-search-cpan-org/</a> for details.
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> points to Gna which was discontinued.
				The link should be updated (probably along with download URLs).
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> points to codeplex which was discontinued.
				The link should be updated (probably along with download URLs).
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> points to Google Code which was discontinued.
				The link should be updated (probably along with download URLs).
				If this link is still alive, it may point to a new project homepage.
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> is a permanent redirect to its HTTPS counterpart <code>https://example.com/</code> and should be updated.
			
			</td>
		</tr>
	
		<tr>
			<td class="text-center"><a href="/project/zsh/versions">zsh</a></td>
			<td class="text-center">zsh</td><td class="text-center"><a href="/maintainer/johndoe%40example.com">johndoe@example.com</a></td><td class="text-left">
			
				Homepage link <code>https://example.com/</code> is <a href="/link/https://example.com/">dead</a> (<b class="link-error">HTTP 404</b>)
				for more than a month and should be replaced by alive link (see other packages for hints, or link to <a href="https://archive.org/">archive.org</a> as a last resort).
			
			</td>
		</tr>
	
	</tbody>
</table>


</div>


<footer class="footer">
	<div class="container">
		<p class="pull-right footer-links">
			GitHub repositories:
			<a href="https://github.com/repology/repology-rs/tree/master/repology-webapp">webapp</a>,
			<a href="https://github.com/repology/repology-updater">updater</a>,
			<a href="https://github.com/repology/repology-rules">ruleset</a>
		</p>
		<p>
			Copyright (C) 2016-2026 Dmitry Marakasov<br>
			Code licensed under GPLv3+.
			
		</p>
	</div>
</footer>

<script src="/static/jquery-3.7.1.min.cc6904672d4db9a3.js"></script>
<script src="/static/bootstrap.min.v3.3.7.66502a3c5769c640.js"></script>
<script src="/static/moment.min.v2.29.2.b7efa16ed0d164d6.js"></script>
<script src="/static/repology.v2.ee0228ab3d88406f.js"></script>

</body>
</html>
